--- a/apidefs/Cargo.toml
+++ b/apidefs/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "ipcs-apidefs"
 version = "0.0.0"
-authors = ["Michal Hornicky <mhornick@redhat.com>"]
-repository = ""
+authors = ["Michal Hornicky <semtexzv@gmail.com>"]
+repository = "https://github.com/semtexzv/ipcs"
+description = "API type definitions for IPCS HTTP api"
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT"
 
 [dependencies]
-serde = { version = "*", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
