--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "ipcs-cli"
-version = "0.1.0"
-authors = ["Michal Hornicky <mhornick@redhat.com>"]
+version = "0.0.0"
+authors = ["Michal Hornicky <semtexzv@gmail.com>"]
+repository = "https://github.com/semtexzv/ipcs"
+description = "CLI interface for IPCS"
+license = "MIT"
 edition = "2018"
 
 [[bin]]
@@ -10,14 +13,14 @@ path = "src/main.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies.clap]
-version = "*"
+version = "2"
 
 [dependencies.ipcs-node]
-path = "../node"
+version = "0.0.0"
 
 [dependencies.ipcs-api]
-path = "../api"
+version = "0.0.0"
 
 [dependencies]
 tokio = "0.2"
-env_logger = "*"
+env_logger = "0.7.1"
