--- a/codegen/Cargo.toml
+++ b/codegen/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
 name = "ipcs-codegen"
 version = "0.0.0"
-authors = ["Michal Hornicky <mhornick@redhat.com>"]
+authors = ["Michal Hornicky <semtexzv@gmail.com>"]
+repository = "https://github.com/semtexzv/ipcs"
+description = "Shim for generating IPCS entrypoint"
 edition = "2018"
+license = "MIT"
 
 [lib]
 proc-macro = true
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 quote = "1.0"
