--- a/executor/Cargo.toml
+++ b/executor/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
 name = "ipcs-executor"
-version = "0.1.0"
-authors = ["Michal Hornicky <mhornick@redhat.com>"]
+version = "0.0.0"
+authors = ["Michal Hornicky <semtexzv@gmail.com>"]
+repository = "https://github.com/semtexzv/ipcs"
+description = "Executor of IPCS functions"
+license = "MIT"
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies.wasmer]
 package = "wasmer-runtime"
 version = "0.16.0"
 
 [dependencies]
-log = "*"
+log = "0.4.11"
