--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -1,13 +1,16 @@
 [package]
 name = "ipcs-runtime"
 version = "0.0.0"
-authors = ["Michal Hornicky <mhornick@redhat.com>"]
+authors = ["Michal Hornicky <semtexzv@gmail.com>"]
+repository = "https://github.com/semtexzv/ipcs"
+description = "Runtime shim for IPCS functions written in rust"
+license = "MIT"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies.codegen]
 package = "ipcs-codegen"
-path = "../codegen"
+version = "0.0.0"
 
 [dependencies]
