--- a/apidefs/Cargo.toml
+++ b/apidefs/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ipcs-apidefs"
-version = "0.0.0"
+version = "0.0.1-alpha.1"
 authors = ["Michal Hornicky <semtexzv@gmail.com>"]
 repository = "https://github.com/semtexzv/ipcs"
 description = "API type definitions for IPCS HTTP api"
