--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ipcs-cli"
-version = "0.0.0"
+version = "0.0.1-alpha.1"
 authors = ["Michal Hornicky <semtexzv@gmail.com>"]
 repository = "https://github.com/semtexzv/ipcs"
 description = "CLI interface for IPCS"
@@ -10,16 +10,15 @@ edition = "2018"
 [[bin]]
 name = "ipcs"
 path = "src/main.rs"
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies.clap]
 version = "2"
 
 [dependencies.ipcs-node]
-version = "0.0.0"
+version = "0.0.1-alpha.1"
 
 [dependencies.ipcs-api]
-version = "0.0.0"
+version = "0.0.1-alpha.1"
 
 [dependencies]
 tokio = "0.2"
