--- a/examples/capitalize/Cargo.toml
+++ b/examples/capitalize/Cargo.toml
@@ -11,6 +11,6 @@ crate-type = ["cdylib"]
 
 [dependencies.ipcs]
 package = "ipcs-runtime"
-version = "0.0.0"
+version = "0.0.1-alpha.1"
 
 [dependencies]
