Create simple doc, more information about work pieces

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ipcs-cli"
-version = "0.0.1-alpha.1"
+version = "0.0.1"
 authors = ["Michal Hornicky <semtexzv@gmail.com>"]
 repository = "https://github.com/semtexzv/ipcs"
 description = "CLI interface for IPCS"
@@ -15,10 +15,10 @@ path = "src/main.rs"
 version = "2"
 
 [dependencies.ipcs-node]
-version = "0.0.1-alpha.1"
+version = "0.0.1"
 
 [dependencies.ipcs-api]
-version = "0.0.1-alpha.1"
+version = "0.0.1"
 
 [dependencies]
 tokio = "0.2"
