--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ipcs-api"
-version = "0.0.1-alpha.1"
+version = "0.0.1"
 authors = ["Michal Hornicky <semtexzv@gmail.com>"]
 repository = "https://github.com/semtexzv/ipcs"
 description = "Client for IPCS HTTP API"
@@ -9,7 +9,7 @@ edition = "2018"
 
 [dependencies.apidefs]
 package = "ipcs-apidefs"
-version = "0.0.1-alpha.1"
+version = "0.0.1"
 
 [dependencies]
 reqwest = {version = "0.10.7", features = ["json"] }
