--- a/codegen/Cargo.toml
+++ b/codegen/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ipcs-codegen"
-version = "0.0.1-alpha.1"
+version = "0.0.1"
 authors = ["Michal Hornicky <semtexzv@gmail.com>"]
 repository = "https://github.com/semtexzv/ipcs"
 description = "Shim for generating IPCS entrypoint"
