--- a/examples/capitalize/Cargo.toml
+++ b/examples/capitalize/Cargo.toml
@@ -1,16 +1,14 @@
 [package]
 name = "capitalize"
 version = "0.1.0"
-authors = ["Michal Hornicky <mhornick@redhat.com>"]
+authors = ["Michal Hornicky <semtexzv@gmail.com>"]
 edition = "2018"
 
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies.ipcs]
 package = "ipcs-runtime"
-version = "0.0.1-alpha.1"
+version = "0.0.1"
 
 [dependencies]
