--- a/executor/Cargo.toml
+++ b/executor/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ipcs-executor"
-version = "0.0.1-alpha.1"
+version = "0.0.1"
 authors = ["Michal Hornicky <semtexzv@gmail.com>"]
 repository = "https://github.com/semtexzv/ipcs"
 description = "Executor of IPCS functions"
@@ -13,3 +13,4 @@ version = "0.16.0"
 
 [dependencies]
 log = "0.4.11"
+anyhow = "1.0.32"
