--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ipcs-node"
-version = "0.0.1-alpha.1"
+version = "0.0.1"
 authors = ["Michal Hornicky <semtexzv@gmail.com>"]
 repository = "https://github.com/semtexzv/ipcs"
 description = "IPCS worker node - provides HTTP API & uses libp2p for communication"
@@ -13,11 +13,11 @@ version = "0.4.1-alpha.1"
 
 [dependencies.executor]
 package = "ipcs-executor"
-version = "0.0.1-alpha.1"
+version = "0.0.1"
 
 [dependencies.apidefs]
 package = "ipcs-apidefs"
-version = "0.0.1-alpha.1"
+version = "0.0.1"
 
 [dependencies.libp2p]
 default-features = false
