--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -46,6 +46,8 @@ features = [
 ]
 
 [dependencies]
+anyhow = "1.0.32"
+void = "*"
 warp = "0.2"
 serde = { version = "1", features = ["derive"]}
 serde_json = "1.0.56"
