--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ipcs-node"
-version = "0.0.1"
+version = "0.0.2"
 authors = ["Michal Hornicky <semtexzv@gmail.com>"]
 repository = "https://github.com/semtexzv/ipcs"
 description = "IPCS worker node - provides HTTP API & uses libp2p for communication"
@@ -13,11 +13,11 @@ version = "=0.4.1-alpha.2"
 
 [dependencies.executor]
 package = "ipcs-executor"
-version = "0.0.1"
+version = "0.0.2"
 
 [dependencies.apidefs]
 package = "ipcs-apidefs"
-version = "0.0.1"
+version = "0.0.2"
 
 [dependencies.libp2p]
 default-features = false
@@ -47,7 +47,7 @@ features = [
 
 [dependencies]
 anyhow = "1.0.32"
-void = "*"
+void = "1.0.2"
 warp = "0.2"
 serde = { version = "1", features = ["derive"]}
 serde_json = "1.0.56"
