--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,6 +18,11 @@ jobs:
         
       - name: Install rust
         uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
+          override: true
+        
         
       - name: build
         uses: actions-rs/cargo@v1
