--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,19 +13,13 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        
-      - name: Install rust
-        uses: actions-rs/toolchain@v1
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
         with:
-          profile: minimal
           toolchain: nightly
-          override: true
-        
-        
-      - name: build
-        uses: actions-rs/cargo@v1
+
+      - uses: actions-rs/cargo@v1
         with:
-          command: build --all
+          command: build
+          args: --all
         
