--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,13 @@ members = [
 "executor", "node",
 "runtime",
 
-"ipfsapi",
 "examples/capitalize"
 ]
 
 default-members = ["cli"]
 
 [patch.crates-io]
-semtexzv-ipfsapi = { path = "./ipfsapi" }
+#semtexzv-ipfsapi = { path = "./ipfsapi" }
 
 ipcs-apidefs = { path = "./apidefs" }
 ipcs-api = { path = "./api" }
