--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -1,23 +1,19 @@
 [package]
 name = "ipcs-node"
-version = "0.0.2"
+version = "0.0.3"
 authors = ["Michal Hornicky <semtexzv@gmail.com>"]
 repository = "https://github.com/semtexzv/ipcs"
 description = "IPCS worker node - provides HTTP API & uses libp2p for communication"
 license = "MIT"
 edition = "2018"
 
-[dependencies.ipfsapi]
-package = "semtexzv-ipfsapi"
-version = "=0.4.1-alpha.2"
-
 [dependencies.executor]
 package = "ipcs-executor"
-version = "0.0.2"
+version = "0.0.3"
 
 [dependencies.apidefs]
 package = "ipcs-apidefs"
-version = "0.0.2"
+version = "0.0.3"
 
 [dependencies.libp2p]
 default-features = false
@@ -25,25 +21,35 @@ version = "=0.28.1"
 features = [
 "deflate",
 "dns",
-"floodsub",
+#"floodsub",
 "identify",
 "kad",
-"gossipsub",
-"mdns",
+#"gossipsub",
+"mdns-tokio",
 "mplex",
 "noise",
 "ping",
 "plaintext",
 "pnet",
 "request-response",
-"secio",
 "secp256k1",
 "tcp-tokio",
-#"tcp-async-std",
-"wasm-ext",
+#"wasm-ext",
 "websocket",
 "yamux",
 ]
+
+[dependencies.bitswap]
+package = "libp2p-bitswap"
+version = "*"
+
+[dependencies.cid]
+package = "tiny-cid"
+version = "*"
+
+[dependencies.multihash]
+package = "tiny-multihash"
+version = "*"
 
 [dependencies]
 anyhow = "1.0.32"
@@ -51,11 +57,12 @@ void = "1.0.2"
 warp = "0.2"
 serde = { version = "1", features = ["derive"]}
 serde_json = "1.0.56"
+serde_with = "*"
 tokio = { version = "0.2", default-features = false, features = ["rt-threaded", "blocking", "macros"] }
 futures = "0.3.5"
 bytes = "0.5.6"
 libc = "0.2.73"
 log = "0.4.11"
-multihash = "0.11.2"
+
 hamming = "0.1.3"
 bs58 = "0.3.1"
