--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -29,14 +29,13 @@ features = [
 "identify",
 "kad",
 "gossipsub",
-"mdns",
+"mdns-tokio",
 "mplex",
 "noise",
 "ping",
 "plaintext",
-"pnet",
 "request-response",
-"secio",
+"noise",
 "secp256k1",
 "tcp-tokio",
 #"tcp-async-std",
